--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Url shorter</title>
 </head>
 <body>
     <header></header>
     <main></main>
     <footer></footer>
+
+    <script src="dashboard.js"></script>
 </body>
 </html>
