--- a/services/pages/public/dashboard.html
+++ b/services/pages/public/dashboard.html
@@ -49,21 +49,30 @@
         <div>
             <h1 class="text-4xl mb-10">Dashboard</h1>
 
-            <form action="">
-                <input type="text">
-                <input type="submit" value="Add">
+            <form action="" class="flex flex-col">
+                <label class="mb-4 ">
+                    <div class="text-xl">Add new url</div>
+                    <input type="text" class="w-full border border-gray-700 rounded-3xl p-1 pl-2 pr-2 mt-2">
+                </label>
+                <input type="checkbox">
+                <input type="number" name="" id="" placeholder="Minute">
+                
+                <input type="submit" value="Add" class="cursor-pointer text-md w-full border-fuchsia-400 border pt-1 pb-1 rounded-full  hover:bg-fuchsia-400 hover:text-white ">
             </form>
 
             <section id="my_urls_section">
                 <h2 class="text-2xl mb-5">My urls</h2>
-                <ul id="my_urls">
+                <ul id="my_urls" class="h-96">
                     <li>
                         <div class="flex">
-                            <span class="" tabindex="0">&#9940;</span>
-                        <div></div>
-                        <span tabindex="0"> &#128314; &#128315;</span>
+                            <button class="cursor-pointer" >&#9940;</button>
+                        <div class="ml-2 mr-2 w-full">wfeew</div>
+                        <button class="cursor-pointer"> &#128314;</button>
                         </div>
-                        <div></div>
+                        <div>
+                            <div>Private</div>
+                            <div>number</div>
+                        </div>
                         
                     </li>
                 </ul>
@@ -79,7 +88,9 @@
         <div></div>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="dashboard.js"></script>
+
 </body>
 
 </html>
