Worked on the middlewares of servers, apis, fixed redirect api.

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -20,6 +20,10 @@
             </section>
         </nav>
     </header>
+    <div class="fixed top-0 left-0 block w-full text-5xl bg-[rgba(30,30,30,0.4)] ">
+        <div class=" w-full text-5xl  text-red-500 text-center js-info"></div>
+    </div>
+    
     <main>
         <div class=" mt-[15vh] flex justify-center">
             <a href="/signin" class="text-white text-5xl"> Get started for free</a>
