Changed the sevices and docker-compes.yml for docker.

--- a/frontend/search.html
+++ b/frontend/search.html
@@ -12,7 +12,7 @@
             <a href="/">
                 <h1 class="text-3xl italic font-[cursive] font-bold text-fuchsia-400">USr</h1>
             </a>
-            <section class="flex gap-6 text-xl rounded-2xl bg-gray-400">
+            <section class="flex gap-6 text-xl rounded-2xl bg-gray-400 js-hed-sec">
                 <a href="/signin" class="m-1 ml-2 pl-2">Sign in</a>
                 <a href="/singup" class="bg-fuchsia-400 p-1 pr-2 pl-2 rounded-2xl">Sign up</a>
             </section>
@@ -33,6 +33,7 @@
                 <input type="submit" value="Search" class="text-2xl border-fuchsia-400 border p-5 rounded-full pr-20 hover:bg-fuchsia-400 hover:text-white cursor-pointer">
             </form>
         </div>
+        <div id="result" class="mt-20"></div>
 
     </main>
     <script src="home.js"></script>
