Writed Readme.md, fixed some api endpoint (post request)

--- a/frontend/pages/src/search.html
+++ b/frontend/pages/src/search.html
@@ -36,6 +36,6 @@
         <div id="result" class="mt-20"></div>
 
     </main>
-    <script src="home.js"></script>
+    <script type="module" src="search.html"></script>
 </body>
 </html>
