--- a/frontend/pages/src/signin.html
+++ b/frontend/pages/src/signin.html
@@ -25,13 +25,13 @@
                 </label>
                 <label class="w-full">
                     <div class="text-sm mb-3">Password</div>
-                    <input type="text" name="Password" class="border-gray-700 border  rounded-md p-2 w-full text-sm" required>
+                    <input type="password" name="Password" class="border-gray-700 border  rounded-md p-2 w-full text-sm" required>
                 </label>
                 <input type="submit" value="Sing in" class="text-sm border-fuchsia-400 border p-2 w-full rounded-lg  hover:bg-fuchsia-400 hover:text-white cursor-pointer">
             </form>
         </div>
     </main>
 
-    <script src="signin.js"></script>
+    <script type="module" src="signin.js"></script>
 </body>
 </html>
