--- a/frontend/pages/src/signup.html
+++ b/frontend/pages/src/signup.html
@@ -27,7 +27,7 @@
                 </label>
                 <label class="w-full">
                     <div class="text-sm mb-3">Password</div>
-                    <input type="text" name="Password" class="border-gray-700 border  rounded-md p-2 w-full text-sm" required id="Password">
+                    <input type="password" name="Password" class="border-gray-700 border  rounded-md p-2 w-full text-sm" required id="Password">
                 </label>
                 <label class="w-full">
                     <div class="text-sm mb-3">Name</div>
@@ -38,6 +38,6 @@
         </div>
     </main>
 
-    <script src="signup.js"></script>
+    <script type="module" src="signup.js"></script>
 </body>
 </html>
