--- a/frontend/pages/src/home.html
+++ b/frontend/pages/src/home.html
@@ -41,7 +41,7 @@
         </div>
 
     </main>
-    <script src="home.js"></script>
+    <script type="module" src="home.js"></script>
 </body>
 
 </html>
