--- a/frontend/pages/src/signup.html
+++ b/frontend/pages/src/signup.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" rel="stylesheet">
     <title>Sign up</title>
 </head>
+
 <body>
     <header>
         <nav class="pt-10 mr-5 ml-5 xl:ml-[20%]">
@@ -16,28 +18,63 @@
     </header>
     <main>
         <div class="flex justify-center mt-20 ">
-            <form action="" class="w-full max-w-[700px] ml-2 mr-2 xl:ml-0 xl:mr-0 xl:w-[50%] rounded-3xl  min-h-100 p-10 flex flex-col items-start justify-start gap-9" id="Form">
+            <form action=""
+                class="w-full max-w-[700px] ml-2 mr-2 xl:ml-0 xl:mr-0 xl:w-[50%] rounded-3xl  min-h-100 p-10 flex flex-col items-start justify-start gap-9"
+                id="Form">
                 <h1 class="text-3xl">Sign up</h1>
-                <div>Already have an account? <a href="/signin" class="text-fuchsia-400 hover:text-fuchsia-600">Sign in</a></div>
+                <div>Already have an account? <a href="/signin" class="text-fuchsia-400 hover:text-fuchsia-600">Sign
+                        in</a></div>
 
                 <div id="Error" class="text-red-600"></div>
+                <div id="Message" class="text-green-600"></div>
                 <label class="w-full">
                     <div class="text-sm mb-3">Email</div>
-                    <input type="text" name="Email" class="border-gray-700 border  rounded-md p-2 w-full text-sm" required id="Email">
+                    <input type="text" name="Email" class="border-gray-700 border  rounded-md p-2 w-full text-sm"
+                        required id="Email">
                 </label>
-                <label class="w-full">
+                <label class="w-full relative">
                     <div class="text-sm mb-3">Password</div>
-                    <input type="password" name="Password" class="border-gray-700 border  rounded-md p-2 w-full text-sm" required id="Password">
+                    <input type="password" name="Password" class="border-gray-700 border  rounded-md p-2 w-full text-sm"
+                        required id="Password">
+                    <button id="pass_changer" class="absolute z-10 right-3 bottom-2">
+                        <div class="js-display">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-eye">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" />
+                                <path
+                                    d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6" />
+                            </svg>
+                        </div>
+                        <div class="hidden js-hide">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round"
+                                class="icon icon-tabler icons-tabler-outline icon-tabler-eye-off">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path d="M10.585 10.587a2 2 0 0 0 2.829 2.828" />
+                                <path
+                                    d="M16.681 16.673a8.717 8.717 0 0 1 -4.681 1.327c-3.6 0 -6.6 -2 -9 -6c1.272 -2.12 2.712 -3.678 4.32 -4.674m2.86 -1.146a9.055 9.055 0 0 1 1.82 -.18c3.6 0 6.6 2 9 6c-.666 1.11 -1.379 2.067 -2.138 2.87" />
+                                <path d="M3 3l18 18" />
+                            </svg>
+                        </div>
+                    </button>
                 </label>
+
+
                 <label class="w-full">
                     <div class="text-sm mb-3">Name</div>
-                    <input type="text" name="Name" class="border-gray-700 border  rounded-md p-2 w-full text-sm" required id="Name">
+                    <input type="text" name="Name" class="border-gray-700 border  rounded-md p-2 w-full text-sm"
+                        required id="Name">
                 </label>
-                <input type="submit" value="Sing up" class="text-sm border-fuchsia-400 border p-2 w-full rounded-lg  hover:bg-fuchsia-400 hover:text-white cursor-pointer">
+                <input type="submit" value="Sing up"
+                    class="text-sm border-fuchsia-400 border p-2 w-full rounded-lg  hover:bg-fuchsia-400 hover:text-white cursor-pointer">
             </form>
         </div>
     </main>
 
     <script type="module" src="signup.js"></script>
 </body>
+
 </html>
