Finished search page (page + api).

--- a/frontend/pages/src/search.html
+++ b/frontend/pages/src/search.html
@@ -19,9 +19,6 @@
         </nav>
     </header>
     <main>
-        <div class=" mt-[15vh] flex justify-center">
-            <a href="/signin" class="text-white text-5xl"> Get started for free</a>
-        </div>
         <div class="flex justify-center mt-20 ">
             <form action=""
                 class="w-full ml-2 mr-2 xl:ml-0 xl:mr-0 xl:w-[50%] rounded-3xl bg-gray-200 h-100 p-10 flex flex-col items-start justify-start gap-12" id="Search">
@@ -33,9 +30,9 @@
                 <input type="submit" value="Search" class="text-2xl border-fuchsia-400 border p-5 rounded-full pr-20 hover:bg-fuchsia-400 hover:text-white cursor-pointer">
             </form>
         </div>
-        <div id="result" class="mt-20"></div>
+        <div id="result" class="mt-20 text-center text-2xl"></div>
 
     </main>
-    <script type="module" src="search.html"></script>
+    <script type="module" src="search.js"></script>
 </body>
 </html>
