Fixed the dashboard api (/api/link) in frontend and backand. Added type=buton to button in form in signin and signup pages.

--- a/frontend/pages/src/signup.html
+++ b/frontend/pages/src/signup.html
@@ -36,7 +36,7 @@
                     <div class="text-sm mb-3">Password</div>
                     <input type="password" name="Password" class="border-gray-700 border  rounded-md p-2 w-full text-sm"
                         required id="Password">
-                    <button id="pass_changer" class="absolute z-10 right-3 bottom-2">
+                    <button id="pass_changer" class="absolute z-10 right-3 bottom-2" type="button">
                         <div class="js-display">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
