--- a/frontend/pages/src/search.html
+++ b/frontend/pages/src/search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Search</title>
 </head>
 <body class="min-h-screen bg-linear-to-b bg-gray-600 ">
     <header class="text-gray-50">
